# fed-synthetic-data-generation

./: LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: test-suite.yml
src/fed_synthetic_data/: __init__.py  federated_training.py  post_training.py  privacy_measures.py  synthetic_generator.py  utils.py
tests/: TESTING_GUIDE.md  __init__.py  conftest.py
tests/empirical/: __init__.py  test_federated_validation.py  test_learning_rate_schedulers.py  test_mathematical_correctness.py  test_pipeline_functionality.py
tests/integration/: __init__.py  test_federated_workflow.py  test_post_training.py  test_serialisation_pipeline.py  test_utils_integration.py
tests/unit/: __init__.py  test_federated_training.py  test_imports.py  test_post_training.py  test_privacy_measures.py  test_synthetic_generator.py  test_utils.py
tests/utils/: test_helpers.py
